--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,11 @@ authors = [
 ]
 description = "Easy to use logger."
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.7"
 classifiers = [
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
@@ -28,6 +30,7 @@ dependencies = []
 [project.optional-dependencies]
 dev = [
     "pytest==7.2.1",
+    "tox==4.4.4",
 ]
 
 [tool.pytest.ini_options]
