--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,6 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "vlogging"
-version = "0.0.1"
 authors = [
     { name="Yuya Honda", email="yuyahnd.info@gmail.com" }
 ]
@@ -23,6 +22,8 @@ classifiers = [
 
 dependencies = []
 
+dynamic = ["version"]
+
 [project.urls]
 "Homepage" = "https://github.com/yuyahnd/vlogging"
 "Bug Tracker" = "https://github.com/yuyahnd/vlogging/issues"
@@ -33,9 +34,12 @@ dev = [
     "tox==4.4.4",
 ]
 
+[tool.setuptools]
+package-dir = {"" = "src"}
+
+[tool.setuptools.dynamic]
+version = {attr = "vlogging.__version__"}
+
 [tool.pytest.ini_options]
 pythonpath = ["src"]
 testpaths = ["tests"]
-
-[tool.setuptools]
-package-dir = {"" = "src"}
