--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ authors = [
 ]
 description = "Easy to use logger."
 readme = "README.md"
+license = {text = "MIT License"}
 requires-python = ">=3.7"
 classifiers = [
     "Programming Language :: Python :: 3",
