--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,17 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "vlogging"
-authors = [
-    { name="Yuya Honda", email="yuyahnd.info@gmail.com" }
-]
 description = "Easy to use logger."
 readme = "README.md"
-license = {text = "MIT License"}
 requires-python = ">=3.7"
+license = {text = "MIT License"}
+keywords = ["vlogging", "logging", "logger", "log"]
+authors = [
+    { name = "Yuya Honda", email = "yuyahnd.info@gmail.com" }
+]
+maintainers = [
+    { name = "Yuya Honda", email = "yuyahnd.info@gmail.com" }
+]
 classifiers = [
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.7",
@@ -20,20 +24,19 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "License :: OSI Approved :: MIT License",
 ]
-
 dependencies = []
 
 dynamic = ["version"]
-
-[project.urls]
-"Homepage" = "https://github.com/yuyahnd/vlogging"
-"Bug Tracker" = "https://github.com/yuyahnd/vlogging/issues"
 
 [project.optional-dependencies]
 dev = [
     "pytest==7.2.1",
     "tox==4.4.4",
 ]
+
+[project.urls]
+"Homepage" = "https://github.com/yuyahnd/vlogging"
+"Bug Tracker" = "https://github.com/yuyahnd/vlogging/issues"
 
 [tool.setuptools]
 package-dir = {"" = "src"}
